--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.1.0",
   "description": "React component for Feather icons",
   "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node ./bin/build && babel src --out-dir dist --ignore 'src/feather'"
+    "build": "node ./bin/build && babel src --out-dir dist --ignore 'src/feather' --copy-files"
   },
   "repository": {
     "type": "git",
