--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-feather",
-  "version": "2.0.3",
-  "description": "React component for Feather icons",
+  "name": "@rent_avail/icons",
+  "version": "1.0.0",
+  "description": "React components for Feather icons",
   "main": "build/index.js",
   "module": "dist/index.js",
   "sideEffects": false,
@@ -19,7 +19,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/feathericons/react-feather.git"
+    "url": "git+https://github.com/rentalutions/icons.git"
   },
   "keywords": [
     "react",
@@ -29,12 +29,12 @@
     "feather",
     "design"
   ],
-  "author": "Carmelo Pullara",
+  "author": "Patrick Krawczykowski <patrick@dreadful.design>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/feathericons/react-feather/issues"
+    "url": "https://github.com/rentalutions/icons/issues"
   },
-  "homepage": "https://github.com/feathericons/react-feather#readme",
+  "homepage": "https://github.com/feathericons/icons#readme",
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
