Force package to build on install (Temporary)
Temporary process until the original package accepts the PR and pushes to npm

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "compile": "rm -rf src/icons && node bin/build.js",
     "build:bundle": "rm -rf build && rollup --config rollup.config.js",
     "build:es": "rm -rf dist && babel src --out-dir dist --copy-files",
-    "build": "concurrently \"npm:build:*\""
+    "build": "concurrently \"npm:build:*\"",
+    "postinstall": "yarn install && yarn build"
   },
   "files": [
     "dist",
