--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:bundle": "rm -rf build && rollup --config rollup.config.js",
     "build:es": "rm -rf dist && babel src --out-dir dist --copy-files",
     "build": "concurrently \"npm:build:*\"",
-    "postinstall": "yarn install && yarn build"
+    "postinstall": "yarn build"
   },
   "files": [
     "dist",
