--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:bundle": "rm -rf build && rollup --config rollup.config.js",
     "build:es": "rm -rf dist && babel src --out-dir dist --copy-files",
     "build": "concurrently \"npm:build:*\"",
-    "postinstall": "yarn build"
+    "preinstall": "npm install --ignore-scripts",
+    "postinstall": "npm run build && rm -rf node_modules"
   },
   "files": [
     "dist",
