--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "compile": "rm -rf src/icons && node bin/build.js",
     "build:bundle": "rm -rf build && rollup --config rollup.config.js",
     "build:es": "rm -rf dist && babel src --out-dir dist --copy-files",
-    "build": "concurrently \"npm:build:*\"",
-    "postinstall": "yarn build"
+    "build": "concurrently \"npm:build:*\""
   },
   "files": [
     "dist",
