--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-feather",
-  "version": "2.0.10",
+  "version": "2.0.11",
   "description": "React component for Feather icons",
-  "main": "build/index.js",
+  "main": "src/index.js",
   "module": "src/index.js",
   "sideEffects": false,
   "typings": "src/index.d.ts",
